# Grupo_8PDS2

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
html/: abstractrepo_8hpp_source.html  abstractservice_8hpp_source.html  abstractview_8hpp_source.html  annotated.html  authservice_8hpp_source.html  classAuthService-members.html  classAuthService.html  classAuthService__coll__graph.map  classAuthService__coll__graph.md5  classLoginView-members.html  classLoginView.html  classLoginView__coll__graph.map  classLoginView__coll__graph.md5  classRepo-members.html  classRepo.html  classRepo__inherit__graph.map  classRepo__inherit__graph.md5  classService-members.html  classService.html  classService__inherit__graph.map  classService__inherit__graph.md5  classTag-members.html  classTag.html  classTagRepo-members.html  classTagRepo.html  classTagRepo__coll__graph.map  classTagRepo__inherit__graph.md5  classTagService-members.html  classTagService.html  classTagService__coll__graph.md5  classTagService__inherit__graph.map  classTagView-members.html  classTagView.html  classTagView__coll__graph.map  classTagView__coll__graph.md5  classTask-members.html  classTask.html  classTaskRepo-members.html  classTaskRepo.html  classTaskRepo__inherit__graph.map  (+196 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+24 more)
(+50 files in other folders)
